--- a/package.json
+++ b/package.json
@@ -22,20 +22,21 @@
   "author": "Sandi&Soumya",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^0.4.0",
-    "twilio": "^4.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "zod": "^3.22.4",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "twilio": "^4.19.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "@types/express": "^4.17.17",
     "@types/cors": "^2.8.13",
-    "typescript": "^5.2.2",
-    "tsx": "^3.14.0",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.5"
+    "tsx": "^3.14.0",
+    "typescript": "^5.2.2"
   }
 }
