--- a/package.json
+++ b/package.json
@@ -24,10 +24,14 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@modelcontextprotocol/sdk": "^0.4.0",
+    "@types/node-media-server": "^2.3.7",
+    "@types/ws": "^8.18.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "node-media-server": "^4.0.21",
     "twilio": "^4.19.0",
+    "ws": "^8.18.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
