--- a/.env.example
+++ b/.env.example
@@ -11,9 +11,8 @@ MCP_SERVER_HOST=localhost
 WEBHOOK_BASE_URL=http://localhost:3000
 
 # Google Gemini Configuration (for summarization)
-GEMINI_API_KEY='AIzaSyCYXMPf6Rx4gPw3aG2HjfTOMARJv3yDMWE'
-GEMINI_MODEL='gemini-2.0-flash'
+GEMINI_API_KEY=your_gemini_api_key_here
+GEMINI_MODEL=gemini-pro
 
-# Logging
-LOG_LEVEL=info
-NODE_ENV=development
+# JWT Secret for token validation (generate a strong secret in production)
+JWT_SECRET=your_jwt_secret_here
